products_audit_utf8.txt
node.exe : C:\Users\OM
EN\AppData\Local\npm-c
ache\_npx\1bf7c3c15bf4
7d04\node_modules\ts-n
ode\src\index.ts:859
At line:1 char:1
+ & "C:\Program Files\
nodejs/node.exe" 
"C:\Program 
Files\nodejs/node_mo 
...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (C:\Users\O   
 MEN\A...rc\index.    
ts:859:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
    return new TSError
(diagnosticText, 
diagnosticCodes, 
diagnostics);
           ^
TSError: Γ¿» Unable 
to compile TypeScript:
scripts/check-products
.ts(26,18): error 
TS2322: Type 'null' 
is not assignable to 
type '(Without<UserSca
larRelationFilter, 
UserWhereInput> & 
UserWhereInput) | (Wit
hout<UserWhereInput, U
serScalarRelationFilte
r> & UserScalarRelatio
nFilter) | undefined'.

    at createTSError (
C:\Users\OMEN\AppData\
Local\npm-cache\_npx\1
bf7c3c15bf47d04\node_m
odules\ts-node\src\ind
ex.ts:859:12)
    at reportTSError (
C:\Users\OMEN\AppData\
Local\npm-cache\_npx\1
bf7c3c15bf47d04\node_m
odules\ts-node\src\ind
ex.ts:863:19)
    at getOutput (C:\U
sers\OMEN\AppData\Loca
l\npm-cache\_npx\1bf7c
3c15bf47d04\node_modul
es\ts-node\src\index.t
s:1077:36)
    at Object.compile 
(C:\Users\OMEN\AppData
\Local\npm-cache\_npx\
1bf7c3c15bf47d04\node_
modules\ts-node\src\in
dex.ts:1433:41)
    at 
Module.m._compile (C:\
Users\OMEN\AppData\Loc
al\npm-cache\_npx\1bf7
c3c15bf47d04\node_modu
les\ts-node\src\index.
ts:1617:30)
    at node:internal/m
odules/cjs/loader:1893
:10
    at Object.require.
extensions.<computed> 
[as .ts] (C:\Users\OME
N\AppData\Local\npm-ca
che\_npx\1bf7c3c15bf47
d04\node_modules\ts-no
de\src\index.ts:1621:1
2)
    at Module.load (no
de:internal/modules/cj
s/loader:1481:32)
    at Module._load (n
ode:internal/modules/c
js/loader:1300:12)
    at TracingChannel.
traceSync (node:diagno
stics_channel:328:14) 
{
  diagnosticCodes: [ 
2322 ]
}
